adding result api
