# docs/swagger.json
@@ -8,6 +8,32 @@
     },
     "basePath": "/api/v1",
     "paths": {
+        "/result": {
+            "get": {
+                "description": "Get result",
+                "produces": [
+                    "application/json"
+                ],
+                "tags": [
+                    "result"
+                ],
+                "operationId": "get-result",
+                "responses": {
+                    "200": {
+                        "description": "OK",
+                        "schema": {
+                            "$ref": "#/definitions/result.Result"
+                        }
+                    },
+                    "500": {
+                        "description": "Internal Server Error",
+                        "schema": {
+                            "$ref": "#/definitions/api.ErrorResponse"
+                        }
+                    }
+                }
+            }
+        },
         "/scores": {
             "get": {
                 "description": "Get all scores",
